--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "push": "git add . && git commit -m 'update' && git push"
   },
   "dependencies": {
     "expo": "~48.0.10",
